k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gabriegonza/space-missions-backend:v1.0.2 #Minha imagem do dockerhub
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: backend-pvc
              mountPath: /app/data
          resources:
            requests: 
              memory: "128Mi"
              cpu: "100m"
            limits:
                memory: "256Mi"
                cpu: "500m"
      volumes:
        - name: backend-pvc
          persistentVolumeClaim:
            claimName: backend-pvc
