k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: backend
spec:
  ingressClassName: nginx
  rules:
    - host: api.space-missions.test
      http:
        paths:
          - path: /missions
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3001
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3001
